syntax = "proto3";

option go_package = "github.com/thapakazi/learn-grpc/backend/proto";

message Person {
  string name = 1;
  int32 id = 2;
  string email = 3;
}

message PersonRequest {
  int32 id = 1;
}

service PersonService {
  rpc GetPerson(PersonRequest) returns (Person);
}
